# ATC2025-Poby

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: CPU-overhead.md  Concurrency.md  Memory-configuration.md  e2e-performance.md
pb/: compress.proto  container.proto  content.proto  offload.proto
scripts/: copy_metadata.py  remote_kill.sh  set_env.sh
scripts/concurr/: concurr.sh  start_poby.sh
scripts/cpuoverhead/: cpuoverhead.sh  start_poby.sh
scripts/e2e/: containerd_baseline.sh  get_e2e_result.sh  iSulad_baseline.sh  poby.sh  start_poby.sh
scripts/kill/: kill_all.sh  kill_cli.sh  kill_clients.sh  kill_content_server.sh  kill_dpu.sh
scripts/mem_block/: mem_block.sh  start_poby.sh
src/doca/: CMakeLists.txt  common.cc  common.h  compress.cc  compress.h  core.cc  core.h  doca_buf.cc  doca_buf.h  params.cc  params.h
src/dpu/: CMakeLists.txt  content_fetcher.cc  content_fetcher.h  decompress_client_epoll.cc  decompress_client_epoll.h  dpu_main.cc  metadata.h  offload_server_epoll.cc  offload_server_epoll.h
src/host/client/: CMakeLists.txt  client_cli.cc  client_main.cc  command_server.cc  command_server.h  decompress_server_epoll.cc  decompress_server_epoll.h  metadata.cc  metadata.h  offload_client_epoll.cc  offload_client_epoll.h  untar_engine.cc  untar_engine.h
src/host/server/: CMakeLists.txt  content_server.cc
src/image/: CMakeLists.txt  image_ops.c  image_ops.h  modules_config.c  modules_config.h
src/network/: CMakeLists.txt  Channel.cc  Channel.h  CountDownLatch.cc  CountDownLatch.h  CurrentThread.cc  CurrentThread.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.h  Poller.cc  Poller.h  Thread.cc  Thread.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h  Timestamp.cc  Timestamp.h  WeakCallback.h  utils.h
src/network/rdma/: Callbacks.h  DevContext.cc  DevContext.h  RdmaClient.cc  RdmaClient.h  RdmaConfig.h  RdmaConnection.cc  RdmaConnection.h  RdmaConnector.cc  RdmaConnector.h  RdmaExchangeInfo.h  RdmaServer.cc  RdmaServer.h  error.h
src/network/tcp/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  InetAddress.cc  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpConnector.cc  TcpConnector.h  TcpServer.cc  TcpServer.h
src/test/: CMakeLists.txt  image_ops_test.c
src/utils/: CMakeLists.txt  MsgFrame.h  blob_pool.h  spdlog_wrapper.cc  spdlog_wrapper.h
tool/: CMakeLists.txt  copy_metadata.py  download_docker_image.py  gen_uncompressed_layers.py  get_image_data.sh  image_compress.cc
